Fix content overflow
Header links, hero image, testimonial container
and call to action box made issues with
overflowing on smaller screens. Properties
`max-width: 100%` and `flex-wrap: wrap` made sure
that such elements don't get out of their
containers so easily.

There's also gap between header logo and header
links when header links wraps on smaller screens,
so they don't look squashed.

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body {
 }
 
 /* HEADER */
+.header {
+    gap: 64px;
+}
+
 .logo {
     height: 64px;
     width: 64px;
@@ -37,6 +41,7 @@ body {
     display: flex;
     gap: 24px;
     list-style-type: none;
+    flex-wrap: wrap;
 }
 
 .nav-link a {
@@ -100,7 +105,7 @@ body {
 
 .hero-image {
     height: auto;
-    width: 480px;
+    max-width: 100%;
 }
 
 /* INFO */
@@ -135,6 +140,7 @@ body {
 
 /* TESTIMONIAL */
 .testimonial {
+    max-width: 100%;
     background-color: #e5e7eb;
     padding: 96px;
     display: flex;
@@ -168,6 +174,8 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 16px;
+    max-width: 100%;
+    flex-wrap: wrap;
 }
 
 .cta-heading {
